--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "directories": {
     "test": "test"
   },
-  "scripts": {
-    "test": "npm run test"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,6 +17,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
-    "typescript": "^4.0.2"
+    "nodemon": "^2.0.4",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
