--- a/ned-function-example/package.json
+++ b/ned-function-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ned-proxy",
+  "name": "ned-function-example",
   "version": "1.0.0",
   "description": "",
   "repository": "git@github.com:lioreshai/ned-proxy.git",
